/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.2.1/userguide/java_library_plugin.html
 */

// Apply the java-library plugin to add support for Java Library
apply plugin: 'java-library'

// In this section you declare where to find the dependencies of your project
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
    mavenLocal()
    maven {
		url "https://repo1.uhc.com/artifactory/maven-repo"
	}
}

sourceCompatibility=21

dependencies {
    // This dependency is exported to consumers, that is to say found on their compile classpath.
    api 'org.apache.commons:commons-math3:3.6.1'

    api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
    api group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
    api group: 'log4j', name: 'log4j', version: '1.2.17'
    api group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.30'


    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'com.google.guava:guava:22.0'
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'

    // Use JUnit test framework
//    testImplementation 'junit:junit:4.12'

    //Junit 5
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
    testImplementation 'org.hamcrest:hamcrest-library:2.2'


}

